# nevestrip

./: .gitignore  CMakeLists.txt  NeveStrip.jucer  README.md  USAGE.md
Builds/MacOSX/: Info-AU.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/NeveStrip.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h  include_juce_audio_basics.cpp  include_juce_audio_basics.mm  include_juce_audio_devices.cpp  include_juce_audio_devices.mm  include_juce_audio_formats.cpp  include_juce_audio_formats.mm  include_juce_audio_plugin_client_AU_1.mm  include_juce_audio_plugin_client_AU_2.mm  include_juce_audio_plugin_client_VST3.cpp  include_juce_audio_plugin_client_VST3.mm  include_juce_audio_processors.cpp  include_juce_audio_processors.mm  include_juce_audio_utils.cpp  include_juce_audio_utils.mm  include_juce_core.cpp  include_juce_core.mm  include_juce_data_structures.cpp  include_juce_data_structures.mm  include_juce_dsp.cpp  include_juce_dsp.mm  include_juce_events.cpp  include_juce_events.mm  include_juce_graphics.cpp  include_juce_graphics.mm  include_juce_gui_basics.cpp  include_juce_gui_basics.mm  include_juce_gui_extra.cpp  include_juce_gui_extra.mm
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DSPUtils.h  HighPassFilter.cpp  HighPassFilter.h  NeveCompressor.cpp  NeveCompressor.h  NeveEQ.cpp  NeveEQ.h  NeveLimiter.cpp  NeveLimiter.h  Transformer.cpp  Transformer.h
